@@ -105,6 +105,11 @@ joystick_1_fire_7, numeric, 4096
 joystick_1_fire_8, numeric, 4096
 joystick_1_fire_9, numeric, 4096
 joystick_1_fire_10, numeric, 4096
+joystick_1_fire_11, numeric, 4096
+joystick_1_fire_12, numeric, 4096
+joystick_1_fire_13, numeric, 4096
+joystick_1_fire_14, numeric, 4096
+joystick_1_fire_15, numeric, 4096
 joystick_2, string, NULL
 joystick_2_output, numeric, 0
 joystick_2_fire_1, numeric, 4096
@@ -117,6 +122,11 @@ joystick_2_fire_7, numeric, 4096
 joystick_2_fire_8, numeric, 4096
 joystick_2_fire_9, numeric, 4096
 joystick_2_fire_10, numeric, 4096
+joystick_2_fire_11, numeric, 4096
+joystick_2_fire_12, numeric, 4096
+joystick_2_fire_13, numeric, 4096
+joystick_2_fire_14, numeric, 4096
+joystick_2_fire_15, numeric, 4096
 joystick_keyboard_output, numeric, 0
 joystick_keyboard_up, numeric, 113
 joystick_keyboard_down, numeric, 97
